Changed boundary to non-wrap, need to fix positioning of snake body following the head

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
 .player {
     position: absolute;
     background-color: orange;
-    margin-left: 0px;
-    margin-top: 0px;
+    margin-left: 240px;
+    margin-top: 100px;
     width: 18px;
     height: 18px;
     border: black solid 1px;
